politique-confidentialite.html

--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -6,9 +6,208 @@
   <title>Politique de confidentialité (RGPD) - OuassVTC</title>
   <meta name="description" content="Politique de confidentialité de OuassVTC, chauffeur VTC à Perpignan. Informations sur la collecte, l'utilisation et la protection de vos données personnelles (formulaire, contact, réservation).">
   <meta name="robots" content="index,follow" />
+
+  <!-- JSON-LD pour indiquer que c'est une page de politique -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Politique de confidentialité - OuassVTC",
+    "description": "Politique de confidentialité et traitement des données personnelles pour le service VTC OuassVTC à Perpignan.",
+    "url": "https://www.ouassvtc.fr/politique-confidentialite.html"
+  }
+  </script>
+
+  <style>
+    :root{
+      --brand:#000;
+      --border:#e5e7eb;
+      --bg:#f5f5f5;
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body {
+      font-family: Arial, sans-serif;
+      background-color: var(--bg);
+      color: #333;
+      margin: 0;
+      line-height:1.6;
+      padding-bottom: 90px; /* pour les boutons fixes */
+    }
+    header{
+      background:#000;
+      color:#fff;
+      text-align:center;
+      padding:24px 16px;
+    }
+    header img{max-height:90px;height:auto}
+    main{
+      max-width: 850px;
+      margin: 0 auto;
+      background:#fff;
+      padding:24px 18px 100px;
+      border-radius:16px;
+      box-shadow:0 4px 16px rgba(0,0,0,.05);
+      margin-top:20px;
+    }
+    h1{font-size:1.7rem;margin-bottom:16px;text-align:center}
+    h2{font-size:1.1rem;margin-top:22px;margin-bottom:6px}
+    p{margin-bottom:12px;color:#555}
+    ul{margin-left:20px;margin-bottom:14px;color:#555}
+    a{color:#000;font-weight:600;text-decoration:none}
+    footer{
+      background:#000;
+      color:#fff;
+      text-align:center;
+      padding:18px 12px 28px;
+      font-size:13px;
+    }
+    /* Boutons flottants */
+    .floating-buttons {
+      position: fixed;
+      bottom: 15px;
+      left: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      gap: 10px;
+      padding: 8px 10px;
+      z-index: 999;
+    }
+    .floating-buttons a {
+      flex: 1;
+      text-align: center;
+      background: var(--brand);
+      color: #fff;
+      font-weight: 700;
+      border-radius: 999px;
+      padding: 14px 10px;
+      text-decoration: none;
+      font-size: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+      transition: transform .2s, opacity .2s;
+    }
+    .floating-buttons a:hover {
+      transform: translateY(-2px);
+      opacity: 0.9;
+    }
+    @media (max-width:600px){
+      .floating-buttons a{font-size:14px;padding:12px 8px;}
+    }
+  </style>
 </head>
 <body>
-  <h1>Politique de confidentialité (RGPD)</h1>
-  <p>Contenu complet fourni précédemment.</p>
+
+  <header>
+    <img src="ouassvtc.png" alt="OuassVTC">
+  </header>
+
+  <main>
+    <h1>Politique de confidentialité (RGPD)</h1>
+    <p>
+      Cette politique de confidentialité a pour but d’expliquer comment le site <strong>OuassVTC</strong>
+      (https://www.ouassvtc.fr) collecte et traite vos données personnelles lorsque vous nous contactez ou réservez un trajet.
+    </p>
+
+    <h2>1. Responsable du traitement</h2>
+    <p>
+      Le responsable du traitement est : <strong>OuassVTC</strong>, chauffeur VTC basé à Perpignan (66000).<br>
+      Contact : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a> – Tél. <a href="tel:0644120784">06 44 12 07 84</a>
+    </p>
+
+    <h2>2. Données collectées</h2>
+    <p>Nous collectons uniquement les données nécessaires pour répondre à votre demande :</p>
+    <ul>
+      <li>Nom / prénom</li>
+      <li>Numéro de téléphone</li>
+      <li>Adresse e-mail</li>
+      <li>Informations de trajet (adresse de départ / arrivée, date, heure, nombre de passagers)</li>
+      <li>Éventuels messages envoyés via le formulaire ou WhatsApp</li>
+    </ul>
+    <p>Nous ne collectons pas de données sensibles.</p>
+
+    <h2>3. Finalités du traitement</h2>
+    <p>Vos données sont utilisées uniquement pour :</p>
+    <ul>
+      <li>vous recontacter suite à votre demande de réservation ou de renseignement ;</li>
+      <li>confirmer un trajet, un horaire, un prix ;</li>
+      <li>vous envoyer un lien de paiement ou une facture si besoin ;</li>
+      <li>améliorer notre service (suivi des demandes).</li>
+    </ul>
+
+    <h2>4. Base légale</h2>
+    <p>
+      Le traitement est fondé sur votre <strong>consentement</strong> (lorsque vous envoyez un formulaire ou un message)
+      et sur l’<strong>exécution d’un contrat</strong> (lorsque vous réservez un trajet VTC).
+    </p>
+
+    <h2>5. Durée de conservation</h2>
+    <p>
+      Vos données de contact sont conservées le temps nécessaire pour traiter votre demande puis peuvent être conservées
+      quelques mois à des fins de suivi commercial ou légal (facturation).
+      Elles ne sont pas conservées plus longtemps que nécessaire.
+    </p>
+
+    <h2>6. Destinataires</h2>
+    <p>
+      Vos données sont destinées uniquement à OuassVTC.  
+      Nous n’effectuons pas de revente ni de cession de vos données à des tiers.
+      Certains outils techniques peuvent traiter les données pour notre compte (par ex. <strong>EmailJS</strong> pour l’envoi des formulaires),
+      mais uniquement pour permettre l’acheminement de votre demande.
+    </p>
+
+    <h2>7. Formulaires et EmailJS</h2>
+    <p>
+      Lorsque vous remplissez un formulaire sur le site, les informations sont envoyées de façon sécurisée via le service <strong>EmailJS</strong>
+      vers l’adresse e-mail de OuassVTC afin de pouvoir vous répondre.
+      Ces informations ne sont utilisées que pour vous recontacter.
+    </p>
+
+    <h2>8. Vos droits</h2>
+    <p>Conformément au RGPD, vous disposez des droits suivants :</p>
+    <ul>
+      <li>Droit d’accès à vos données</li>
+      <li>Droit de rectification si elles sont inexactes</li>
+      <li>Droit à l’effacement (“droit à l’oubli”)</li>
+      <li>Droit d’opposition au traitement</li>
+      <li>Droit à la limitation</li>
+    </ul>
+    <p>
+      Pour exercer vos droits, contactez : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>.
+      Nous traiterons votre demande dans les meilleurs délais.
+    </p>
+
+    <h2>9. Cookies</h2>
+    <p>
+      Le site peut utiliser des cookies de fonctionnement (pour le bon affichage du site) et éventuellement de mesure d’audience.
+      Vous pouvez désactiver les cookies dans les réglages de votre navigateur.
+    </p>
+
+    <h2>10. Sécurité</h2>
+    <p>
+      Nous mettons en œuvre des moyens raisonnables pour protéger vos données (accès limité, outils tiers reconnus).
+      Toutefois, aucun système n’est totalement infaillible sur Internet.
+    </p>
+
+    <h2>11. Liens utiles</h2>
+    <p>
+      👉 <a href="mentions-legales.html">Mentions légales</a><br>
+      👉 <a href="contact.html">Nous contacter</a><br>
+      👉 <a href="services.html">Nos services VTC à Perpignan</a>
+    </p>
+
+    <p style="margin-top:20px;font-size:13px;color:#888;">
+      Dernière mise à jour : 10/11/2025
+    </p>
+  </main>
+
+  <!-- Boutons fixes -->
+  <div class="floating-buttons">
+    <a href="index.html">⬅️ Accueil</a>
+    <a href="tel:0644120784">📞 Appeler</a>
+    <a href="index.html#formResa">📅 Réserver</a>
+  </div>
+
+  <footer>© 2025 OuassVTC - Tous droits réservés.</footer>
+
 </body>
 </html>
