mentions-legales.html

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mentions légales - OuassVTC</title>
-  <meta name="description" content="Mentions légales du site OuassVTC, service de chauffeur VTC à Perpignan (66). Informations éditeur, hébergement et propriété intellectuelle.">
+  <meta name="description" content="Mentions légales du site OuassVTC, service de chauffeur VTC à Perpignan (66). Informations éditeur, hébergement OVHcloud et propriété intellectuelle.">
   <style>
     :root{
       --brand:#000;
@@ -39,6 +39,7 @@
     h1{font-size:1.7rem;margin-bottom:16px;text-align:center}
     h2{font-size:1.1rem;margin-top:20px;margin-bottom:6px}
     p{margin-bottom:12px;color:#555}
+    a{color:#000;text-decoration:none}
     footer{
       background:#000;
       color:#fff;
@@ -87,7 +88,7 @@
 
   <main>
     <h1>Mentions légales</h1>
-    <p>Conformément aux dispositions de la loi n°2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, il est précisé aux utilisateurs du site l’identité des différents intervenants.</p>
+    <p>Conformément à la loi n°2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, il est précisé aux utilisateurs du site l’identité des différents intervenants.</p>
 
     <h2>1. Éditeur du site</h2>
     <p>
@@ -105,8 +106,12 @@
 
     <h2>3. Hébergement</h2>
     <p>
-      Le site est hébergé par le prestataire choisi par OuassVTC.<br>
-      (Vous pouvez préciser ici l’hébergeur exact : OVH, o2switch, LWS…)
+      Le site <strong>https://www.ouassvtc.fr</strong> est hébergé par :<br>
+      <strong>OVHcloud</strong><br>
+      2 rue Kellermann<br>
+      59100 Roubaix<br>
+      France<br>
+      Site : <a href="https://www.ovhcloud.com">https://www.ovhcloud.com</a>
     </p>
 
     <h2>4. Propriété intellectuelle</h2>
@@ -117,14 +122,15 @@
 
     <h2>5. Données personnelles</h2>
     <p>
-      Les informations envoyées via le formulaire de contact ou de réservation sont utilisées uniquement pour répondre aux demandes des clients (devis, réservation, informations).
-      Aucune donnée n’est vendue à des tiers.
-      Conformément au RGPD, vous pouvez demander la suppression de vos données en écrivant à : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>.
+      Les informations envoyées via le formulaire de contact ou de réservation sont utilisées uniquement pour répondre à votre demande (devis, réservation, renseignements).
+      Elles ne sont pas revendues à des tiers.
+      Vous pouvez demander la suppression de vos données à : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>.
+      Pour plus de détails, consultez aussi notre <a href="politique-confidentialite.html">Politique de confidentialité (RGPD)</a>.
     </p>
 
     <h2>6. Cookies</h2>
     <p>
-      Le site peut utiliser des cookies de mesure d’audience ou de fonctionnement. Vous pouvez les désactiver dans les paramètres de votre navigateur.
+      Le site peut utiliser des cookies techniques ou de mesure d’audience. Vous pouvez les désactiver dans les réglages de votre navigateur.
     </p>
 
     <h2>7. Zone d’intervention</h2>
@@ -137,6 +143,7 @@
     </p>
   </main>
 
+  <!-- Boutons fixes bas -->
   <div class="floating-buttons">
     <a href="index.html">⬅️ Accueil</a>
     <a href="tel:0644120784">📞 Appeler</a>
