--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -3,154 +3,124 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mentions légales - OuassVTC</title>
-  <meta name="description" content="Mentions légales du site OuassVTC, service de chauffeur VTC à Perpignan (66). Informations éditeur, hébergement OVHcloud et propriété intellectuelle.">
+  <title>Mentions légales - OuassVTC | Chauffeur VTC à Perpignan</title>
+
+  <meta name="description" content="Mentions légales du site OuassVTC, chauffeur VTC à Perpignan et dans les Pyrénées-Orientales. Retrouvez les informations légales, RGPD et hébergement OVHcloud.">
+  <meta name="keywords" content="VTC Perpignan, chauffeur privé Perpignan, taxi Perpignan, mentions légales VTC, RGPD VTC, transport aéroport Perpignan, chauffeur Pyrénées-Orientales">
+  <link rel="canonical" href="https://www.ouassvtc.fr/mentions-legales.html">
+
+  <link rel="icon" href="ouassvtc.png" type="image/png">
+  <meta name="theme-color" content="#000000">
+
+  <!-- Données structurées LocalBusiness -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "OuassVTC",
+    "image": "https://www.ouassvtc.fr/ouassvtc.png",
+    "telephone": "+33644120784",
+    "email": "contact@ouassvtc.fr",
+    "url": "https://www.ouassvtc.fr",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Perpignan",
+      "postalCode": "66000",
+      "addressCountry": "FR"
+    },
+    "priceRange": "€€",
+    "areaServed": "Pyrénées-Orientales"
+  }
+  </script>
+
   <style>
-    :root{
-      --brand:#000;
-      --border:#e5e7eb;
-      --bg:#f5f5f5;
-    }
+    :root{--brand:#000;--border:#e5e7eb;--bg:#f9f9f9;}
     *{box-sizing:border-box;margin:0;padding:0}
-    body {
-      font-family: Arial, sans-serif;
-      background-color: var(--bg);
-      color: #333;
-      margin: 0;
-      line-height:1.6;
-      padding-bottom: 90px;
-    }
-    header{
-      background:#000;
-      color:#fff;
-      text-align:center;
-      padding:24px 16px;
-    }
+    body{font-family:Arial,sans-serif;background:var(--bg);color:#333;line-height:1.6;margin:0;padding-bottom:90px}
+    header{background:#000;color:#fff;text-align:center;padding:24px 16px}
     header img{max-height:90px;height:auto}
-    main{
-      max-width: 850px;
-      margin: 0 auto;
-      background:#fff;
-      padding:24px 18px 100px;
-      border-radius:16px;
-      box-shadow:0 4px 16px rgba(0,0,0,.05);
-      margin-top:20px;
-    }
+    main{max-width:850px;margin:24px auto;background:#fff;padding:24px 18px 100px;border-radius:16px;box-shadow:0 4px 16px rgba(0,0,0,.05)}
     h1{font-size:1.7rem;margin-bottom:16px;text-align:center}
-    h2{font-size:1.1rem;margin-top:20px;margin-bottom:6px}
+    h2{font-size:1.2rem;margin-top:22px;margin-bottom:8px;color:#000}
     p{margin-bottom:12px;color:#555}
     a{color:#000;text-decoration:none}
-    footer{
-      background:#000;
-      color:#fff;
-      text-align:center;
-      padding:18px 12px 28px;
-      font-size:13px;
-    }
-    .floating-buttons {
-      position: fixed;
-      bottom: 15px;
-      left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-around;
-      gap: 10px;
-      padding: 8px 10px;
-      z-index: 999;
-    }
-    .floating-buttons a {
-      flex: 1;
-      text-align: center;
-      background: var(--brand);
-      color: #fff;
-      font-weight: 700;
-      border-radius: 999px;
-      padding: 14px 10px;
-      text-decoration: none;
-      font-size: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-      transition: transform .2s, opacity .2s;
-    }
-    .floating-buttons a:hover {
-      transform: translateY(-2px);
-      opacity: 0.9;
-    }
-    @media (max-width:600px){
-      .floating-buttons a{font-size:14px;padding:12px 8px;}
-    }
+    a:hover{text-decoration:underline}
+    footer{background:#000;color:#fff;text-align:center;padding:18px 12px 28px;font-size:13px}
+    .floating-buttons{position:fixed;bottom:15px;left:0;width:100%;display:flex;justify-content:space-around;gap:10px;padding:8px 10px;z-index:999}
+    .floating-buttons a{flex:1;text-align:center;background:var(--brand);color:#fff;font-weight:700;border-radius:999px;padding:14px 10px;text-decoration:none;font-size:15px;box-shadow:0 4px 12px rgba(0,0,0,0.25);transition:transform .2s,opacity .2s}
+    .floating-buttons a:hover{transform:translateY(-2px);opacity:0.9}
+    @media(max-width:600px){.floating-buttons a{font-size:14px;padding:12px 8px}}
   </style>
 </head>
 <body>
 
   <header>
-    <img src="ouassvtc.png" alt="OuassVTC">
+    <img src="ouassvtc.png" alt="Logo OuassVTC, chauffeur privé à Perpignan">
   </header>
 
   <main>
-    <h1>Mentions légales</h1>
-    <p>Conformément à la loi n°2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, il est précisé aux utilisateurs du site l’identité des différents intervenants.</p>
+    <h1>Mentions légales – OuassVTC, Chauffeur VTC à Perpignan</h1>
+
+    <p>Bienvenue sur le site officiel de <strong>OuassVTC</strong>, votre chauffeur VTC à <strong>Perpignan</strong> et dans les Pyrénées-Orientales (66). Ce document présente les informations légales relatives à l’exploitation du site <a href="https://www.ouassvtc.fr">www.ouassvtc.fr</a>.</p>
 
     <h2>1. Éditeur du site</h2>
     <p>
       <strong>OuassVTC</strong><br>
-      Chauffeur VTC à Perpignan (66000)<br>
+      Chauffeur privé à Perpignan<br>
       Téléphone : <a href="tel:0644120784">06 44 12 07 84</a><br>
       Email : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a><br>
-      Activité : Transport de personnes avec chauffeur (VTC)
+      Activité : Transport de personnes (VTC – Voiture de Transport avec Chauffeur)
     </p>
 
     <h2>2. Directeur de publication</h2>
-    <p>
-      Le directeur de la publication du site est : <strong>OuassVTC</strong>.
-    </p>
+    <p>Le directeur de publication est <strong>OuassVTC</strong>.</p>
 
-    <h2>3. Hébergement</h2>
+    <h2>3. Hébergeur du site</h2>
     <p>
-      Le site <strong>https://www.ouassvtc.fr</strong> est hébergé par :<br>
       <strong>OVHcloud</strong><br>
-      2 rue Kellermann<br>
-      59100 Roubaix<br>
-      France<br>
-      Site : <a href="https://www.ovhcloud.com">https://www.ovhcloud.com</a>
+      2 rue Kellermann – 59100 Roubaix – France<br>
+      Site web : <a href="https://www.ovhcloud.com" target="_blank" rel="noopener">www.ovhcloud.com</a><br>
+      Hébergement mutualisé en France (UE)
     </p>
 
     <h2>4. Propriété intellectuelle</h2>
-    <p>
-      L’ensemble du contenu du site (textes, photos, logo, éléments graphiques) est la propriété de OuassVTC ou fait l’objet d’une autorisation d’utilisation.
-      Toute reproduction, modification, publication ou adaptation de tout ou partie des éléments du site, quel que soit le moyen ou le procédé utilisé, est interdite sans l’autorisation écrite préalable.
-    </p>
+    <p>Le contenu du site <a href="https://www.ouassvtc.fr">www.ouassvtc.fr</a> (textes, photographies, graphismes, logo, charte graphique) est la propriété exclusive de OuassVTC. Toute reproduction ou diffusion sans autorisation est interdite.</p>
 
-    <h2>5. Données personnelles</h2>
-    <p>
-      Les informations envoyées via le formulaire de contact ou de réservation sont utilisées uniquement pour répondre à votre demande (devis, réservation, renseignements).
-      Elles ne sont pas revendues à des tiers.
-      Vous pouvez demander la suppression de vos données à : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>.
-      Pour plus de détails, consultez aussi notre <a href="politique-confidentialite.html">Politique de confidentialité (RGPD)</a>.
-    </p>
+    <h2>5. Données personnelles et RGPD</h2>
+    <p>Les informations collectées via les formulaires (nom, téléphone, adresses, messages) sont nécessaires au traitement des réservations et des demandes de contact. Ces données ne sont jamais revendues à des tiers. Vous pouvez exercer vos droits (accès, rectification, suppression) en écrivant à <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>.</p>
+    <p>Pour plus d’informations, consultez notre <a href="politique-confidentialite.html">Politique de confidentialité RGPD</a>.</p>
 
     <h2>6. Cookies</h2>
-    <p>
-      Le site peut utiliser des cookies techniques ou de mesure d’audience. Vous pouvez les désactiver dans les réglages de votre navigateur.
-    </p>
+    <p>Ce site utilise uniquement des cookies techniques et de mesure d’audience anonymes pour améliorer l’expérience utilisateur. Vous pouvez désactiver les cookies via les paramètres de votre navigateur.</p>
 
     <h2>7. Zone d’intervention</h2>
-    <p>
-      OuassVTC intervient à Perpignan et dans les Pyrénées-Orientales (Canet-en-Roussillon, Argelès-sur-Mer, Saint-Estève, Le Barcarès, Toulouges) ainsi que pour les trajets vers les gares et aéroports (Perpignan, Béziers, Gérone, Barcelone).
-    </p>
+    <p>OuassVTC dessert l’ensemble du département des Pyrénées-Orientales : Perpignan, Canet-en-Roussillon, Argelès-sur-Mer, Saint-Estève, Le Barcarès, ainsi que les trajets vers les gares et aéroports (Perpignan, Béziers, Gérone, Barcelone).</p>
 
-    <p style="margin-top:20px;font-size:13px;color:#888;">
-      Dernière mise à jour : 10/11/2025
+    <h2>8. Liens utiles</h2>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="services.html">Services VTC</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+
+    <p style="margin-top:20px;font-size:13px;color:#777;">Dernière mise à jour : 10 novembre 2025</p>
+
+    <hr style="margin:30px 0;opacity:0.2;">
+    <p style="font-size:14px;color:#666;">
+      <strong>Référence SEO :</strong> Mentions légales du site OuassVTC, chauffeur privé VTC à Perpignan (66). Informations légales, RGPD et hébergement OVHcloud. Transport de personnes vers les aéroports, gares et villes des Pyrénées-Orientales.
     </p>
   </main>
 
-  <!-- Boutons fixes bas -->
   <div class="floating-buttons">
     <a href="index.html">⬅️ Accueil</a>
     <a href="tel:0644120784">📞 Appeler</a>
     <a href="index.html#formResa">📅 Réserver</a>
   </div>
 
-  <footer>© 2025 OuassVTC - Tous droits réservés.</footer>
+  <footer>
+    © 2025 OuassVTC - Tous droits réservés.
+  </footer>
 
 </body>
 </html>
