mentions-legales.html

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mentions légales - OuassVTC | Chauffeur VTC à Perpignan</title>
 
-  <meta name="description" content="Mentions légales du site OuassVTC, chauffeur VTC à Perpignan et dans les Pyrénées-Orientales. Retrouvez les informations légales, RGPD et hébergement OVHcloud.">
+  <meta name="description" content="Mentions légales du site OuassVTC, chauffeur VTC à Perpignan et dans les Pyrénées-Orientales. Informations légales, RGPD et hébergement OVHcloud.">
   <meta name="keywords" content="VTC Perpignan, chauffeur privé Perpignan, taxi Perpignan, mentions légales VTC, RGPD VTC, transport aéroport Perpignan, chauffeur Pyrénées-Orientales">
   <link rel="canonical" href="https://www.ouassvtc.fr/mentions-legales.html">
 
@@ -24,6 +24,7 @@
     "url": "https://www.ouassvtc.fr",
     "address": {
       "@type": "PostalAddress",
+      "streetAddress": "10 rue Claude Monet",
       "addressLocality": "Perpignan",
       "postalCode": "66000",
       "addressCountry": "FR"
@@ -66,32 +67,35 @@
     <h2>1. Éditeur du site</h2>
     <p>
       <strong>OuassVTC</strong><br>
-      Chauffeur privé à Perpignan<br>
-      Téléphone : <a href="tel:0644120784">06 44 12 07 84</a><br>
-      Email : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a><br>
-      Activité : Transport de personnes (VTC – Voiture de Transport avec Chauffeur)
+      Entreprise individuelle – Auto-entrepreneur<br>
+      <strong>Nom du responsable :</strong> Bouab Ouassini<br>
+      <strong>Adresse :</strong> 10 rue Claude Monet, 66000 Perpignan, France<br>
+      <strong>SIRET :</strong> 818 284 788 00012<br>
+      <strong>Téléphone :</strong> <a href="tel:0644120784">06 44 12 07 84</a><br>
+      <strong>Email :</strong> <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a><br>
+      Activité : Transport de personnes – VTC (Voiture de Transport avec Chauffeur)
     </p>
 
     <h2>2. Directeur de publication</h2>
-    <p>Le directeur de publication est <strong>OuassVTC</strong>.</p>
+    <p>Le directeur de publication du site est <strong>M. Bouab Ouassini</strong>.</p>
 
     <h2>3. Hébergeur du site</h2>
     <p>
       <strong>OVHcloud</strong><br>
       2 rue Kellermann – 59100 Roubaix – France<br>
       Site web : <a href="https://www.ovhcloud.com" target="_blank" rel="noopener">www.ovhcloud.com</a><br>
-      Hébergement mutualisé en France (UE)
+      Hébergement en France (UE)
     </p>
 
     <h2>4. Propriété intellectuelle</h2>
-    <p>Le contenu du site <a href="https://www.ouassvtc.fr">www.ouassvtc.fr</a> (textes, photographies, graphismes, logo, charte graphique) est la propriété exclusive de OuassVTC. Toute reproduction ou diffusion sans autorisation est interdite.</p>
+    <p>Le contenu du site <a href="https://www.ouassvtc.fr">www.ouassvtc.fr</a> (textes, photographies, logo, charte graphique) est la propriété exclusive de OuassVTC. Toute reproduction, diffusion ou exploitation sans autorisation est interdite.</p>
 
     <h2>5. Données personnelles et RGPD</h2>
-    <p>Les informations collectées via les formulaires (nom, téléphone, adresses, messages) sont nécessaires au traitement des réservations et des demandes de contact. Ces données ne sont jamais revendues à des tiers. Vous pouvez exercer vos droits (accès, rectification, suppression) en écrivant à <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>.</p>
+    <p>Les informations collectées via les formulaires de contact ou de réservation (nom, téléphone, adresses, messages) sont utilisées uniquement pour le traitement des demandes et ne sont jamais partagées avec des tiers. Conformément au RGPD, vous pouvez exercer vos droits d’accès, de rectification ou de suppression en écrivant à <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>.</p>
     <p>Pour plus d’informations, consultez notre <a href="politique-confidentialite.html">Politique de confidentialité RGPD</a>.</p>
 
     <h2>6. Cookies</h2>
-    <p>Ce site utilise uniquement des cookies techniques et de mesure d’audience anonymes pour améliorer l’expérience utilisateur. Vous pouvez désactiver les cookies via les paramètres de votre navigateur.</p>
+    <p>Ce site utilise uniquement des cookies techniques et analytiques anonymes afin d’améliorer l’expérience utilisateur. Vous pouvez les désactiver dans les paramètres de votre navigateur.</p>
 
     <h2>7. Zone d’intervention</h2>
     <p>OuassVTC dessert l’ensemble du département des Pyrénées-Orientales : Perpignan, Canet-en-Roussillon, Argelès-sur-Mer, Saint-Estève, Le Barcarès, ainsi que les trajets vers les gares et aéroports (Perpignan, Béziers, Gérone, Barcelone).</p>
@@ -99,16 +103,17 @@
     <h2>8. Liens utiles</h2>
     <ul>
       <li><a href="index.html">Accueil</a></li>
-      <li><a href="services.html">Services VTC</a></li>
+      <li><a href="services.html">Nos services</a></li>
       <li><a href="faq.html">FAQ</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
     </ul>
 
     <p style="margin-top:20px;font-size:13px;color:#777;">Dernière mise à jour : 10 novembre 2025</p>
 
     <hr style="margin:30px 0;opacity:0.2;">
     <p style="font-size:14px;color:#666;">
-      <strong>Référence SEO :</strong> Mentions légales du site OuassVTC, chauffeur privé VTC à Perpignan (66). Informations légales, RGPD et hébergement OVHcloud. Transport de personnes vers les aéroports, gares et villes des Pyrénées-Orientales.
+      <strong>Référence SEO :</strong> Mentions légales du site OuassVTC, chauffeur privé VTC à Perpignan (66). Informations légales, RGPD, hébergement OVHcloud et transport de personnes dans les Pyrénées-Orientales.
     </p>
   </main>
 
