politique-confidentialite.html

--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Politique de confidentialité (RGPD) - OuassVTC</title>
-  <meta name="description" content="Politique de confidentialité de OuassVTC, chauffeur VTC à Perpignan. Informations sur la collecte, l'utilisation et la protection de vos données personnelles (formulaire, contact, réservation).">
+  <meta name="description" content="Politique de confidentialité de OuassVTC, chauffeur VTC à Perpignan. Comment nous collectons, utilisons et protégeons vos données lors d'une réservation de VTC.">
   <meta name="robots" content="index,follow" />
 
   <!-- JSON-LD pour indiquer que c'est une page de politique -->
@@ -54,6 +54,7 @@
     p{margin-bottom:12px;color:#555}
     ul{margin-left:20px;margin-bottom:14px;color:#555}
     a{color:#000;font-weight:600;text-decoration:none}
+    a:hover{text-decoration:underline;}
     footer{
       background:#000;
       color:#fff;
@@ -104,88 +105,102 @@
   <main>
     <h1>Politique de confidentialité (RGPD)</h1>
     <p>
-      Cette politique de confidentialité a pour but d’expliquer comment le site <strong>OuassVTC</strong>
-      (https://www.ouassvtc.fr) collecte et traite vos données personnelles lorsque vous nous contactez ou réservez un trajet.
+      Cette politique de confidentialité explique comment le site <strong>OuassVTC</strong>
+      (<a href="https://www.ouassvtc.fr">https://www.ouassvtc.fr</a>) collecte et traite vos données personnelles lorsque
+      vous nous contactez ou réservez un trajet VTC à Perpignan et dans les Pyrénées-Orientales.
     </p>
 
     <h2>1. Responsable du traitement</h2>
     <p>
-      Le responsable du traitement est : <strong>OuassVTC</strong>, chauffeur VTC basé à Perpignan (66000).<br>
-      Contact : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a> – Tél. <a href="tel:0644120784">06 44 12 07 84</a>
+      Le responsable du traitement des données est :<br>
+      <strong>Bouab Ouassini</strong><br>
+      Exploitant du service <strong>OuassVTC</strong><br>
+      Adresse : 10 rue Claude Monet, 66000 Perpignan, France<br>
+      SIRET : <strong>818 284 788 00012</strong><br>
+      Email : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a><br>
+      Téléphone : <a href="tel:0644120784">06 44 12 07 84</a>
     </p>
 
     <h2>2. Données collectées</h2>
-    <p>Nous collectons uniquement les données nécessaires pour répondre à votre demande :</p>
+    <p>Nous collectons uniquement les données nécessaires pour répondre à votre demande de transport :</p>
     <ul>
-      <li>Nom / prénom</li>
+      <li>Nom et prénom</li>
       <li>Numéro de téléphone</li>
-      <li>Adresse e-mail</li>
-      <li>Informations de trajet (adresse de départ / arrivée, date, heure, nombre de passagers)</li>
-      <li>Éventuels messages envoyés via le formulaire ou WhatsApp</li>
+      <li>Adresse e-mail (si renseignée)</li>
+      <li>Informations de trajet : adresse de départ, adresse d’arrivée, date et heure, nombre de passagers</li>
+      <li>Informations complémentaires (bagages, enfant, code porte…)</li>
     </ul>
-    <p>Nous ne collectons pas de données sensibles.</p>
+    <p>Nous ne collectons pas de données sensibles (santé, religion, etc.).</p>
 
     <h2>3. Finalités du traitement</h2>
-    <p>Vos données sont utilisées uniquement pour :</p>
+    <p>Vos données sont utilisées pour :</p>
     <ul>
       <li>vous recontacter suite à votre demande de réservation ou de renseignement ;</li>
-      <li>confirmer un trajet, un horaire, un prix ;</li>
-      <li>vous envoyer un lien de paiement ou une facture si besoin ;</li>
-      <li>améliorer notre service (suivi des demandes).</li>
+      <li>organiser et réaliser votre trajet VTC ;</li>
+      <li>vous envoyer, si besoin, un lien de paiement ou une facture ;</li>
+      <li>répondre à vos messages envoyés depuis le site ou WhatsApp ;</li>
+      <li>assurer le suivi de la relation client.</li>
     </ul>
 
     <h2>4. Base légale</h2>
     <p>
-      Le traitement est fondé sur votre <strong>consentement</strong> (lorsque vous envoyez un formulaire ou un message)
-      et sur l’<strong>exécution d’un contrat</strong> (lorsque vous réservez un trajet VTC).
+      Le traitement de vos données est fondé sur :
     </p>
+    <ul>
+      <li>votre <strong>consentement</strong> lorsque vous nous contactez via le formulaire ou par message ;</li>
+      <li>l’<strong>exécution d’un contrat</strong> lorsque vous réservez un trajet de transport avec chauffeur.</li>
+    </ul>
 
     <h2>5. Durée de conservation</h2>
     <p>
-      Vos données de contact sont conservées le temps nécessaire pour traiter votre demande puis peuvent être conservées
-      quelques mois à des fins de suivi commercial ou légal (facturation).
-      Elles ne sont pas conservées plus longtemps que nécessaire.
+      Vos données sont conservées uniquement le temps nécessaire au traitement de votre demande puis, si besoin,
+      pendant une durée limitée afin d’assurer le suivi (maximum 12 mois pour les demandes classiques).
+      Les données liées à la facturation peuvent être conservées plus longtemps pour des raisons légales.
     </p>
 
-    <h2>6. Destinataires</h2>
+    <h2>6. Destinataires des données</h2>
     <p>
-      Vos données sont destinées uniquement à OuassVTC.  
-      Nous n’effectuons pas de revente ni de cession de vos données à des tiers.
-      Certains outils techniques peuvent traiter les données pour notre compte (par ex. <strong>EmailJS</strong> pour l’envoi des formulaires),
-      mais uniquement pour permettre l’acheminement de votre demande.
+      Vos informations sont destinées uniquement à <strong>OuassVTC</strong> (Bouab Ouassini).
+      Nous ne revendons pas vos données et nous ne les partageons pas avec des tiers à des fins commerciales.
     </p>
-
-    <h2>7. Formulaires et EmailJS</h2>
     <p>
-      Lorsque vous remplissez un formulaire sur le site, les informations sont envoyées de façon sécurisée via le service <strong>EmailJS</strong>
-      vers l’adresse e-mail de OuassVTC afin de pouvoir vous répondre.
-      Ces informations ne sont utilisées que pour vous recontacter.
+      Certains prestataires techniques peuvent toutefois intervenir pour l’envoi ou l’hébergement (par ex. <strong>EmailJS</strong> pour l’envoi du formulaire, hébergement OVHcloud), uniquement dans le cadre de la fourniture du service.
     </p>
 
-    <h2>8. Vos droits</h2>
-    <p>Conformément au RGPD, vous disposez des droits suivants :</p>
+    <h2>7. Formulaire et EmailJS</h2>
+    <p>
+      Lorsque vous envoyez une réservation depuis la page d’accueil, les données sont transmises via le service
+      <strong>EmailJS</strong> jusqu’à notre adresse e-mail afin que nous puissions vous répondre rapidement.
+      Ces données ne sont utilisées que pour la gestion de votre demande.
+    </p>
+
+    <h2>8. Vos droits (RGPD)</h2>
+    <p>
+      Conformément au Règlement Général sur la Protection des Données (RGPD) et à la loi Informatique et Libertés,
+      vous disposez des droits suivants :
+    </p>
     <ul>
-      <li>Droit d’accès à vos données</li>
-      <li>Droit de rectification si elles sont inexactes</li>
-      <li>Droit à l’effacement (“droit à l’oubli”)</li>
-      <li>Droit d’opposition au traitement</li>
-      <li>Droit à la limitation</li>
+      <li>droit d’accès à vos données ;</li>
+      <li>droit de rectification si elles sont inexactes ou incomplètes ;</li>
+      <li>droit à l’effacement (dans les limites légales) ;</li>
+      <li>droit d’opposition au traitement ;</li>
+      <li>droit à la limitation du traitement.</li>
     </ul>
     <p>
-      Pour exercer vos droits, contactez : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>.
-      Nous traiterons votre demande dans les meilleurs délais.
+      Pour exercer vos droits, écrivez-nous à : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>.
+      Nous vous répondrons dans un délai raisonnable.
     </p>
 
     <h2>9. Cookies</h2>
     <p>
-      Le site peut utiliser des cookies de fonctionnement (pour le bon affichage du site) et éventuellement de mesure d’audience.
-      Vous pouvez désactiver les cookies dans les réglages de votre navigateur.
+      Le site peut utiliser des cookies techniques pour le bon fonctionnement (navigation, sécurité) et éventuellement
+      des cookies de mesure d’audience. Vous pouvez configurer votre navigateur pour les refuser.
     </p>
 
     <h2>10. Sécurité</h2>
     <p>
-      Nous mettons en œuvre des moyens raisonnables pour protéger vos données (accès limité, outils tiers reconnus).
-      Toutefois, aucun système n’est totalement infaillible sur Internet.
+      Nous mettons en place des moyens raisonnables pour protéger vos données (accès limité, outils reconnus).
+      Toutefois, Internet restant un réseau ouvert, nous vous invitons à ne pas transmettre d’informations trop sensibles via les formulaires.
     </p>
 
     <h2>11. Liens utiles</h2>
@@ -195,7 +210,12 @@
       👉 <a href="services.html">Nos services VTC à Perpignan</a>
     </p>
 
-    <p style="margin-top:20px;font-size:13px;color:#888;">
+    <hr style="margin:26px 0;opacity:.25;">
+    <p style="font-size:13px;color:#888;">
+      Politique de confidentialité de OuassVTC (Bouab Ouassini), chauffeur VTC à Perpignan (66000), SIRET 818 284 788 00012. Traitement des données personnelles pour les réservations de VTC dans les Pyrénées-Orientales.
+    </p>
+
+    <p style="margin-top:14px;font-size:13px;color:#888;">
       Dernière mise à jour : 10/11/2025
     </p>
   </main>
